--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,43 @@
 @import './scss/variables.scss';
 
 
-.App {
-    background-color: $mainBg;
+
+
+.light {
+    background-color: $mainBgLight;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: $primary;
+    }
+
+    p {
+        color: $secondary;
+    }
+}
+
+.dark {
+    background-color: $mainBgDark;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        background-image: linear-gradient(180deg, #FAFAFA 0%, #7A7A7A 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    p {
+        color: $secondary;
+    }
 }
 
 
