--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -16,20 +16,6 @@
         flex-direction: column;
         gap: 30px;
         align-items: flex-start;
-
-        h1 {
-            font-weight: 700;
-            font-size: 60px;
-            line-height: 73px;
-            color: $primary;
-        }
-
-        p {
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 135%;
-            color: $secondary;
-        }
     }
 }
 
@@ -40,10 +26,6 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
-
-        h2 {
-            color: $primary;
-        }
 
         &__body {
             display: flex;
@@ -62,20 +44,11 @@
                     flex-direction: column;
                     gap: 5px;
 
-                    span,
-                    p {
-                        color: $secondary;
-                    }
-
                     span {
                         font-weight: 500;
                         font-size: 42px;
                         line-height: 51px;
-                    }
-
-                    p {
-                        font-size: 18px;
-                        line-height: 135%;
+                        color: $secondary;
                     }
                 }
             }
@@ -89,9 +62,6 @@
                 p {
                     max-width: 580px;
                     width: 100%;
-                    font-size: 18px;
-                    line-height: 135%;
-                    color: $secondary;
                 }
             }
         }
@@ -120,15 +90,12 @@
             gap: 10px;
 
 
-            h2 {
-                color: $primary;
-            }
-
             p {
                 font-weight: 300;
-                font-size: 18px;
                 line-height: 22px;
                 color: $tertiary;
+                max-width: 448px;
+                width: 100%;
             }
         }
 
@@ -140,12 +107,6 @@
             flex-direction: column;
             align-items: flex-start;
             gap: 16px;
-
-            p {
-                font-size: 18px;
-                line-height: 135%;
-                color: $secondary;
-            }
         }
     }
 
@@ -173,15 +134,10 @@
         align-items: center;
         gap: 40px;
 
-        h2 {
-            color: $primary;
-        }
 
         p {
             font-weight: 300;
-            font-size: 18px;
             line-height: 22px;
-            color: $secondary;
             max-width: 580px;
             width: 100%;
         }
@@ -210,17 +166,12 @@
         justify-content: space-between;
         gap: 40px;
 
-        h2 {
-            color: $primary;
-        }
 
         p {
             max-width: 580px;
             width: 100%;
             font-weight: 300;
-            font-size: 18px;
             line-height: 22px;
-            color: $secondary;
         }
     }
 
@@ -281,9 +232,6 @@
         justify-content: space-around;
     }
 
-    h2 {
-        color: $primary;
-    }
 
     &__content {
         display: flex;
@@ -291,11 +239,7 @@
         gap: 26px;
 
 
-
         p {
-            font-size: 18px;
-            line-height: 135%;
-            color: $secondary;
             max-width: 385px;
             width: 100%;
         }
@@ -303,7 +247,7 @@
 }
 
 .questions {
-    padding-top: 140px;
+    padding: 140px 0;
 
     &__wrapper {
         display: flex;
@@ -317,15 +261,9 @@
         gap: 40px;
         align-items: center;
 
-        h2 {
-            color: $primary;
-        }
 
         p {
-            font-weight: 400;
-            font-size: 18px;
             line-height: 22px;
-            color: $secondary;
         }
     }
 }
