--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,5 +4,6 @@ $tertiary: #A6A6A6;
 $white: #FFFFFF;
 $black: #000000;
 
-$mainBg: #FAFAFA;
+$mainBgLight: #FAFAFA;
+$mainBgDark: #121212;
 $secondaryBg: #F3F3F3;
