--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,4 +6,5 @@ $black: #000000;
 
 $mainBgLight: #FAFAFA;
 $mainBgDark: #121212;
-$secondaryBg: #F3F3F3;
+$secondaryBgLight: #F3F3F3;
+$secondaryBgDark: #2B2B2B;
