--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,22 @@
 @import '../../scss/variables.scss';
 
+
+.header {
+
+    &__light {
+        background-color: $secondaryBgLight;
+    }
+
+    &__dark {
+        background-color: $secondaryBgDark;
+    }
+}
+
 header {
     padding: 20px 0;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 
     nav {
         display: flex;
