--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,7 +22,7 @@ header {
     padding: 20px 0;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 
     nav {
         display: flex;
@@ -41,7 +41,12 @@ header {
                 line-height: 135%;
                 transition: all .3s ease-in-out;
                 color: $secondary;
+            }
 
+            li:not(.themeSwitch) {
+                @media screen and (max-width:660px) {
+                    display: none;
+                }
             }
 
             .light {
