--- a/src/components/OurBrands/OurBrands.module.scss
+++ b/src/components/OurBrands/OurBrands.module.scss
@@ -1,11 +1,22 @@
 .brands {
     padding: 140px 0;
 
+    @media screen and (max-width: 960px) {
+        padding: 80px 0;
+    }
+
+    @media screen and (max-width: 780px) {
+        padding: 60px 0;
+    }
+
+    @media screen and (max-width: 550px) {
+        padding: 40px 0;
+    }
+
     &__wrapper {
         display: flex;
         flex-direction: column;
         gap: 50px;
-
     }
 
     &__top {
@@ -14,18 +25,33 @@
         align-items: center;
         gap: 40px;
 
+        h2 {
+            width: 100%;
+        }
 
         p {
             font-weight: 300;
             line-height: 22px;
-            max-width: 580px;
             width: 100%;
+
+            @media screen and (max-width: 844px) {
+                display: none;
+            }
         }
     }
 
     &__list {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
         gap: 40px;
+        row-gap: 30px;
+        grid-template-columns: repeat(4, 1fr);
+
+        @media screen and (max-width: 1260px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media screen and (max-width: 550px) {
+            grid-template-columns: repeat(1, 1fr);
+        }
     }
 }
