added responsive in brandpage

--- a/src/pages/Brand/Brand.module.scss
+++ b/src/pages/Brand/Brand.module.scss
@@ -4,6 +4,17 @@
     padding-top: 130px;
     padding-bottom: 150px;
 
+    @media screen and (max-width:1200px) {
+        padding-top: 100px;
+        padding-bottom: 120px;
+    }
+
+    @media screen and (max-width:800px) {
+        padding-top: 50px;
+        padding-bottom: 90px;
+    }
+
+
     &__wrapper {
         display: flex;
         flex-direction: column;
@@ -21,6 +32,11 @@
     width: 100%;
     margin: 100px 0;
 
+    @media screen and (max-width:1000px) {
+        margin: 60px 0;
+        padding: 30px 0;
+    }
+
     &__light {
         background-color: $secondaryBgLight;
     }
@@ -33,12 +49,21 @@
         display: flex;
         align-items: center;
         gap: 50px;
+
+        @media screen and (max-width:720px) {
+            flex-direction: column;
+            gap: 30px;
+        }
     }
 
     &__content {
         display: flex;
         flex-direction: column;
         gap: 20px;
+
+        @media screen and (max-width:720px) {
+            text-align: center;
+        }
 
         &__text {
             display: flex;
