--- a/src/components/CocaEnergyItem/ColaEnergyItem.module.scss
+++ b/src/components/CocaEnergyItem/ColaEnergyItem.module.scss
@@ -14,6 +14,11 @@
         gap: 40px;
         align-items: center;
 
+        @media screen and (max-width:1200px) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
         p {
             max-width: 580px;
             width: 100%;
@@ -27,12 +32,20 @@
         padding-bottom: 24px;
         border-bottom: 1px solid $secondary;
 
+
         &__reversed {
             flex-direction: row-reverse;
         }
 
         &__default {
             flex-direction: row;
+        }
+
+        &__default,
+        &__reversed {
+            @media screen and (max-width:720px) {
+                flex-direction: column-reverse;
+            }
         }
 
         &__content {
@@ -87,6 +100,10 @@
         display: flex;
         justify-content: space-between;
         gap: 40px;
+
+        @media screen and (max-width:570px) {
+            flex-direction: column;
+        }
 
         &__nutritional {
             width: 100%;
