small fixes in hamburger, home link

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -101,18 +101,8 @@ header {
         height: 24px;
 
         &__light {
-            svg path {
+            path {
                 fill: $secondary;
-
-            }
-        }
-
-
-        &__dark {
-            svg path {
-                fill: $white;
-                width: 24px;
-                height: 24px;
             }
         }
     }
