--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -94,6 +94,10 @@
         flex-direction: column;
         gap: 35px;
 
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
     }
 }
 
